k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platafyi-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platafyi-frontend
  template:
    metadata:
      labels:
        app: platafyi-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: platafyi-frontend
          image: ghcr.io/platafyi/0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
