k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platafyi-frontend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - plata.fyi
        - www.plata.fyi
  rules:
    - host: plata.fyi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platafyi-frontend
                port:
                  number: 80
    - host: www.plata.fyi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platafyi-frontend
                port:
                  number: 80
